[backend/frontend] Clean